Fixed Projects alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -376,7 +376,10 @@ h2 {
 }
 
 .card-cont {
-  columns: 300px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
   width: 100%;
   padding-inline: 2rem;
   max-width: 1600px;
@@ -388,6 +391,10 @@ h2 {
   overflow: hidden;
   position: relative;
   margin-bottom: 2rem;
+  max-width:320px;
+  min-width: 280px;
+  flex-grow: 1;
+  flex-shrink: 1;
   
   aspect-ratio: 16/10;
   box-sizing: content-box;
@@ -516,7 +523,7 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 3rem;
+  gap: 2rem;
 }
 
 .experience {
